--- a/ce-soir-japporte-le-dessert/src/styles/DessertCard.css
+++ b/ce-soir-japporte-le-dessert/src/styles/DessertCard.css
@@ -36,6 +36,10 @@ text-align: center;
   padding: 5% 10%;
 }
 
+.macaron {
+  width: 15%;
+}
+
 @media (max-width: 768px) {
   .page-container {
     display: flex;
