--- a/ce-soir-japporte-le-dessert/src/styles/ReceipeCard.css
+++ b/ce-soir-japporte-le-dessert/src/styles/ReceipeCard.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 90%;
+  width: 70%;
   border-radius: 5px;
   border: solid 1px #61507f75;
   margin: 1%;
@@ -28,13 +28,45 @@
 
 .dessert-name-receipe {
   text-align: center;
+  color: #61507f;
+}
+
+h2, h3, p, .difficulty-name, .time-needed {
+  color: #61507f;
 }
 
 .information-dessert-receipe {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 5% 10%;
+  padding: 5% 0%;
+  width: 70%;
+  margin: auto;
+}
+
+.difficulty-container-receipe, .time-container-receipe{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  color: #61507f;
+  margin: 0 5%
+}
+
+.chronos-receipe {
+  width: 35%;
+}
+
+.receipe{
+  padding: 1% 10%;
+} 
+
+.receipe-container{
+margin: 5% 0;
+}
+
+.receipe-name {
+  display: flex;
+  justify-content: center;
 }
 
 .ingredient-image {
@@ -57,4 +89,57 @@
   margin: 2%;
   align-items: center;
   width: 20%;
+}
+
+/* Images */
+
+.macaron1-receipe {
+  width: 20%;
+  margin-right: 10%;
+}
+
+.macaron2-receipe {
+  width: 75%;
+  margin-right: 10%;
+}
+
+.macaron3-receipe {
+  width: 70%;
+  margin-right: 10%;
+}
+
+.macaron4-receipe {
+  width: 95%;
+  margin-right: 10%;
+}
+
+
+@media (max-width: 768px) {
+
+  .page-container-receipe{
+    margin-top: 5%;
+  }
+  .container-receipe{
+    width: 90%;
+  }
+
+  .information-dessert-receipe{
+    flex-direction: column;
+  }
+  .dessert-image-receipe{
+    height: 100%;
+  }
+
+  .difficulty-container-receipe, .time-container-receipe {
+    width: 100%;
+  }
+
+  .ingredient-container{
+    width: 40%;
+  }
+
+  .ingredient-image{
+    width: 80%;
+  }
+
 }
