--- a/ce-soir-japporte-le-dessert/src/styles/DessertCard.css
+++ b/ce-soir-japporte-le-dessert/src/styles/DessertCard.css
@@ -18,6 +18,11 @@
   box-shadow: 0 0 10px #61507f;
 }
 
+.chronos-image-container{
+display: flex;
+justify-content: flex-end;
+}
+
 .dessert-image{
   width: 350px;
   height: 250px;
@@ -28,6 +33,7 @@
 .dessert-name, .time-needed{
 text-align: center;
 color: #61507f;
+
 }
 
 .difficulty-name{
@@ -37,7 +43,7 @@ color: #61507f;
 
 .information-dessert{
   display: flex;
-  justify-content: space-between;
+  margin: auto;
   padding: 5% 10%;
 }
 
@@ -123,5 +129,9 @@ color: #61507f;
   justify-content: center;
   display: flex;
   height: 75px;
+}
+
+.chronos-image-container{
+  justify-content: center
 }
 }
