--- a/ce-soir-japporte-le-dessert/src/styles/Navbar.css
+++ b/ce-soir-japporte-le-dessert/src/styles/Navbar.css
@@ -14,7 +14,6 @@ color: #fff0e1;
 
 .link h2:hover{
   color: #61507f;
-  
   }
 
 .link{
@@ -66,10 +65,9 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* General sidebar styles */
 .bm-menu {
   background: #61507f;
-  padding : 0.5em 1.5em 0;
+  padding: 5% 0;
   font-size: 1.15em;
-  height: 150px !important;
-
+  height: 100% !important
 }
 
 /* Morph shape necessary with bubble or elastic */
