--- a/ce-soir-japporte-le-dessert/src/styles/ReceipeCard.css
+++ b/ce-soir-japporte-le-dessert/src/styles/ReceipeCard.css
@@ -132,11 +132,22 @@ margin: 5% 0;
   }
 
   .ingredient-container{
-    width: 40%;
+    width: 150px;
+    height: 180px;
+    text-align: center;
+    margin: 0 5%;
   }
 
   .ingredient-image{
     width: 80%;
   }
 
+
+  .large-ingredient-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    width: 100%;
+    justify-content: center;
+  }
 }
