--- a/ce-soir-japporte-le-dessert/src/styles/ReceipeCard.css
+++ b/ce-soir-japporte-le-dessert/src/styles/ReceipeCard.css
@@ -1,4 +1,3 @@
-
 .page-container-receipe {
   display: flex;
   flex-wrap: wrap;
@@ -27,7 +26,11 @@
   color: #61507f;
 }
 
-h2, h3, p, .difficulty-name, .time-needed {
+h2,
+h3,
+p,
+.difficulty-name,
+.time-needed {
   color: #61507f;
 }
 
@@ -39,25 +42,26 @@ h2, h3, p, .difficulty-name, .time-needed {
   margin: auto;
 }
 
-.difficulty-container-receipe, .time-container-receipe{
+.difficulty-container-receipe,
+.time-container-receipe {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 50%;
   color: #61507f;
-  margin: 0 5%
+  margin: 0 5%;
 }
 
 .chronos-receipe {
   width: 35%;
 }
 
-.receipe{
+.receipe {
   padding: 1% 10%;
-} 
+}
 
-.receipe-container{
-margin: 5% 0;
+.receipe-container {
+  margin: 5% 0;
 }
 
 .receipe-name {
@@ -74,7 +78,7 @@ margin: 5% 0;
   display: flex;
   flex-wrap: wrap;
   margin: auto;
-  width: 80%;
+  width: 90%;
   justify-content: center;
 }
 
@@ -85,6 +89,7 @@ margin: 5% 0;
   margin: 2%;
   align-items: center;
   width: 20%;
+  text-align: center;
 }
 
 /* Images */
@@ -109,39 +114,37 @@ margin: 5% 0;
   margin-right: 10%;
 }
 
-
 @media (max-width: 768px) {
-
-  .page-container-receipe{
+  .page-container-receipe {
     margin-top: 5%;
   }
-  .container-receipe{
+  .container-receipe {
     width: 90%;
-    border: none ;
+    border: none;
   }
 
-  .information-dessert-receipe{
+  .information-dessert-receipe {
+    display: flex;
     flex-direction: column;
   }
-  .dessert-image-receipe{
+  .dessert-image-receipe {
     height: 100%;
   }
 
-  .difficulty-container-receipe, .time-container-receipe {
+  .difficulty-container-receipe,
+  .time-container-receipe {
     width: 100%;
   }
 
-  .ingredient-container{
+  .ingredient-container {
     width: 150px;
     height: 180px;
     text-align: center;
-    margin: 0 5%;
   }
 
-  .ingredient-image{
+  .ingredient-image {
     width: 80%;
   }
-
 
   .large-ingredient-container {
     display: flex;
@@ -149,5 +152,15 @@ margin: 5% 0;
     margin: auto;
     width: 100%;
     justify-content: center;
+  }
+
+  .macaron2-receipe {
+    width: 47%;
+    margin-right: 10%;
+  }
+
+  .chronos-receipe {
+    width: 35%;
+    margin-right: 20px;
   }
 }
